kermeta_projects/fr.irisa.triskell.kermeta.tests/test/io/typechecher_tests/valid/DerivedProperties.kmt
/* $Id: DerivedProperties.kmt,v 1.1 2008-03-04 13:32:55 vmahe Exp $
 * Creation date: February 04, 2008
 * License:	EPL
 * Copyright:
 * Authors:
 *     Vincent Mahe
 */

package derived_properties;

require kermeta
using kermeta::standard

class Example {
	
	attribute int1 : Integer
	attribute ints2 : Integer[0..*]
	attribute ints3 : Set<Integer>
	
	// 1..1 multiplicity & no getter/setter (may be aspectized)
	property p1 : Integer
	
	// read only & 1..1 multiplicity & no getter (may be aspectized)
	property readonly p2 : Integer
	
	// write only & 1..1 multiplicity & no setter (may be aspectized)
	property writeonly p3 : Integer
	
	// 1..1 multiplicity & getter/setter
	property p4 : Integer
		getter is do
			result := int1
		end
		setter is do
			int1 := p4
		end
	
	// read only & 1..1 multiplicity & getter
	property readonly p5 : Integer
		getter is do
			result := int1
		end
	
	// write only & 1..1 multiplicity & setter
	property writeonly p6 : Integer
		setter is do
			int1 := p6
		end
	
	// read only & * multiplicity & no getter (may be aspectized)
	property readonly p7 : Integer[1..*]
	
	// read only & * multiplicity & getter
	property readonly p8 : Integer[1..*]
		getter is do
			var row : Integer[1..*]
			row.addAll(ints2)
			result := row
		end
}